# miniproject

./: .env.example  .gitignore  APP_GRAPH.md  ARCHITECTURE.md  COMPLETION_REPORT.md  DEPLOYMENT.md  FULL_APPLICATION_SPECIFICATION.md  docker-compose.yml  railway.json  start.bat  start.ps1  supabase_schema.sql  supabase_seed.sql
backend/: Dockerfile  fetch_data.py  requirements-test.txt  requirements.txt  run_client.py  server_crash_log.txt  simulate_stress.py  start.sh  test_dynamic_weighting.py  test_endpoints.py  test_inference.py  test_integration.py  test_live.py  test_month2_3.py  test_reality.py  test_week3_6.py  test_ws.py  watch_db.py
backend/app/: main.py
backend/app/api/: auth_routes.py  extended_routes.py  routes.py
backend/app/core/: auth.py  config.py  supabase.py
backend/app/integrations/: composio_mcp.py
backend/app/ml/: data_collector.py  ensemble.py  feature_extractor.py  model.py  online_learning.py  real_data_collector.py  temporal_model.py
backend/app/schemas/: stress.py
backend/app/services/: chat_llm.py  chat_service.py  focus_service.py  history.py  inference.py  (+3 more)
backend/scripts/: convert_real_dataset.py  export_onnx_models.py  quick_convert.py  remediate_data.py  remediate_deterministic.py
desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
desktop/src-tauri/src/: main.rs
docs/: COMPLETION_REPORT.md  IMPLEMENTATION_PACK.md  LANDING_PAGE_DESIGN.md  MINI_DASHBOARD_REALITY_ASSESSMENT.md  ML_LOGIC.md
frontend/: .env.production  Dockerfile  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
(+46 files in other folders)
