[package]
name = "mindpulse-desktop"
version = "1.0.0"
description = "MindPulse - Privacy-first behavioral stress detection"
authors = ["MindPulse Team"]
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
enigo = "0.2"
rdev = "0.5"
rusqlite = { version = "0.32", features = ["bundled"] }
log = "0.4"
env_logger = "0.11"

[build-dependencies]
tauri-build = { version = "2" }

[features]
custom-protocol = ["tauri/custom-protocol"]
